minor deprecated fix